Replace OpenGL with WebGPU (#244)
* add webgpu support

* Update README.md

* wgpu-jni: work on the gradle build for lwjgl3 jni generator

* jni: tweak android jni version to 1.8

* update to kotlin 2.0.0

* gradle: remove mobile targets

* wgpu-natives: fix downloading wgpu headers

* core: remove vSync and backgroundColor from JvmOptions

* ci: tweak paths-ignore for build pipeline