@@ -1,54 +1,36 @@
 import org.jetbrains.kotlin.gradle.plugin.KotlinJsCompilerType
 import org.jetbrains.kotlin.gradle.plugin.KotlinPlatformType
-import org.jetbrains.kotlin.gradle.targets.js.dsl.ExperimentalWasmDsl
 
 plugins {
-    alias(libs.plugins.android.library)
     alias(libs.plugins.kotlin.multiplatform)
-    alias(libs.plugins.kotlinx.serialization)
-    id("littlekt.convention.publication")
+    alias(libs.plugins.kotlin.serialization)
+    id("module.publication")
 }
 
 kotlin {
-    androidTarget {
-        publishLibraryVariants("release", "debug")
+    tasks.withType<Test> {
+        var env = project.properties["env"] as? String
+        if (env == null) {
+            env = System.getProperty("env")
+        }
+        systemProperty("env", env ?: "dev")
+        jvmArgs("--enable-preview")
     }
     jvm {
         compilations.all {
-            kotlinOptions.jvmTarget = "17"
-        }
-        testRuns["test"].executionTask.configure {
-            useJUnit()
+            kotlinOptions.jvmTarget = "11"
+            compileJavaTaskProvider?.get()?.options?.compilerArgs?.add("--enable-preview")
         }
     }
     js(KotlinJsCompilerType.IR) {
         browser {
             binaries.executable()
-            testTask(Action {
-                useKarma {
-                    useChromeHeadless()
-                }
-            })
+            testTask { useKarma { useChromeHeadless() } }
         }
 
-        this.attributes.attribute(
-            KotlinPlatformType.attribute,
-            KotlinPlatformType.js
-        )
+        this.attributes.attribute(KotlinPlatformType.attribute, KotlinPlatformType.js)
 
-        compilations.all {
-            kotlinOptions.sourceMap = true
-        }
-    }
-
-    @OptIn(ExperimentalWasmDsl::class)
-    wasmJs {
-        compilations.all {
-            kotlinOptions {
-                freeCompilerArgs += "-opt-in=kotlin.RequiresOptIn"
-            }
-        }
-        binaries.executable()
+        compilations.all { kotlinOptions.sourceMap = true }
     }
 
     sourceSets {
@@ -59,77 +41,45 @@ kotlin {
                 implementation(libs.kotlinx.serialization.json)
             }
         }
-        val commonTest by getting {
-            dependencies {
-                implementation(kotlin("test"))
-            }
-        }
+        val commonTest by getting { dependencies { implementation(libs.kotlin.test) } }
+
+        //noinspection UseTomlInstead
         val jvmMain by getting {
             dependencies {
-                val lwjglModule = "${libs.lwjgl.asProvider().get().module}:${
-                    libs.lwjgl.asProvider().get().versionConstraint.requiredVersion
-                }"
-                val lwjglGlfwModule =
-                    "${libs.lwjgl.glfw.get().module}:${libs.lwjgl.glfw.get().versionConstraint.requiredVersion}"
-                val lwjglOpenGlModule = "${libs.lwjgl.opengl.get().module}:${
-                    libs.lwjgl.opengl.get().versionConstraint.requiredVersion
-                }"
-                val lwjglOpenAlModule = "${libs.lwjgl.openal.get().module}:${
-                    libs.lwjgl.openal.get().versionConstraint.requiredVersion
-                }"
-                implementation(libs.lwjgl)
-                implementation("$lwjglModule:natives-windows")
-                implementation("$lwjglModule:natives-windows-arm64")
-                implementation("$lwjglModule:natives-linux")
-                implementation("$lwjglModule:natives-linux-arm64")
-                implementation("$lwjglModule:natives-macos")
-                implementation("$lwjglModule:natives-macos-arm64")
-
-                implementation(libs.lwjgl.glfw)
-                implementation("$lwjglGlfwModule:natives-windows")
-                implementation("$lwjglGlfwModule:natives-windows-arm64")
-                implementation("$lwjglGlfwModule:natives-linux")
-                implementation("$lwjglGlfwModule:natives-linux-arm64")
-                implementation("$lwjglGlfwModule:natives-macos")
-                implementation("$lwjglGlfwModule:natives-macos-arm64")
-
-                implementation(libs.lwjgl.opengl)
-                implementation("$lwjglOpenGlModule:natives-windows")
-                implementation("$lwjglOpenGlModule:natives-windows-arm64")
-                implementation("$lwjglOpenGlModule:natives-linux")
-                implementation("$lwjglOpenGlModule:natives-linux-arm64")
-                implementation("$lwjglOpenGlModule:natives-macos")
-                implementation("$lwjglOpenGlModule:natives-macos-arm64")
-
-                implementation(libs.lwjgl.openal)
-                implementation("$lwjglOpenAlModule:natives-windows")
-                implementation("$lwjglOpenAlModule:natives-windows-arm64")
-                implementation("$lwjglOpenAlModule:natives-linux")
-                implementation("$lwjglOpenAlModule:natives-linux-arm64")
-                implementation("$lwjglOpenAlModule:natives-macos")
-                implementation("$lwjglOpenAlModule:natives-macos-arm64")
+                implementation(project(":wgpu-ffm"))
+                implementation(project(":wgpu-natives"))
 
                 implementation(libs.mp3.decoder)
+
+                implementation(libs.lwjgl.core)
+                implementation(libs.lwjgl.glfw)
+                implementation(libs.lwjgl.openal)
+                implementation(libs.lwjgl.stb)
+
+                listOf(
+                        "natives-windows",
+                        "natives-windows-arm64",
+                        "natives-linux",
+                        "natives-linux-arm64",
+                        "natives-macos",
+                        "natives-macos-arm64"
+                    )
+                    .forEach { platform ->
+                        runtimeOnly("${libs.lwjgl.core.get()}:$platform")
+                        runtimeOnly("${libs.lwjgl.glfw.get()}:$platform")
+                        runtimeOnly("${libs.lwjgl.openal.get()}:$platform")
+                        runtimeOnly("${libs.lwjgl.stb.get()}:$platform")
+                    }
             }
         }
         val jvmTest by getting
         val jsMain by getting
         val jsTest by getting
-        val wasmJsMain by getting
-        val wasmJsTest by getting
-        val androidMain by getting {
-            dependencies {
-                implementation(libs.kotlinx.coroutines.android)
-            }
-        }
-        val androidUnitTest by getting
 
         val jvmAndroidMain = maybeCreate("jvmAndroidMain")
 
         jvmAndroidMain.dependsOn(commonMain)
-        androidMain.dependsOn(jvmAndroidMain)
         jvmMain.dependsOn(jvmAndroidMain)
-        androidUnitTest.dependsOn(commonTest)
         jvmTest.dependsOn(commonTest)
         jsTest.dependsOn(commonTest)
 
@@ -140,20 +90,11 @@ kotlin {
                 optIn("kotlin.time.ExperimentalTime")
             }
         }
-    }
-}
 
-android {
-    namespace = "com.lehaine.littlekt.core"
-    sourceSets["main"].manifest.srcFile("src/androidMain/AndroidManifest.xml")
-    compileSdk = (findProperty("android.compileSdk") as String).toInt()
-
-    defaultConfig {
-        minSdk = (findProperty("android.minSdk") as String).toInt()
-        targetSdk = (findProperty("android.targetSdk") as String).toInt()
-    }
-    compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_17
-        targetCompatibility = JavaVersion.VERSION_17
+        targets.configureEach {
+            compilations.configureEach {
+                compilerOptions.configure { freeCompilerArgs.add("-Xexpect-actual-classes") }
+            }
+        }
     }
 }
